# tarquin

./: .gitignore  README.md
basis/: LCM_Siemens_30_1000.xml  LCM_Siemens_30_2000.xml  calc_mm_damp.py  phd1000.xml
basis/HR-MAS/: Ace.csv  Ala.csv  Asp.csv  Cho.csv  Cr.csv  GPC.csv  Gln.csv  Glth.csv  Gly.csv  Gua.csv  Lac.csv  MM0p9.csv  MM0p9lip.csv  MM1p3.csv  MM1p3lip.csv  MM1p6lip.csv  MM1p7.csv  MM1p923.csv  MM2p023.csv  MM2p039.csv  MM2p081.csv  MM2p234.csv  MM2p2731.csv  MM2p798.csv  MM2p834.csv  MM3p0.csv  MM3p27.csv  MM5p3lip.csv  NAA.csv  PCh.csv  PEth.csv  Suc.csv  TMSP.csv  Tau.csv  h-Tau.csv  m-Ins.csv  s-Ins.csv
basis/LCModel/: Ins.csv  Lip09.csv  Lip13a.csv  Lip13b.csv  Lip20.csv  MM09.csv  MM14.csv  NAA.csv  PCh.csv  Scyllo.csv  Tau.csv
basis/faster/: Ala.csv  Gln.csv  Glu.csv  Lac.csv  NAA.csv  Tau.csv
basis/phd/: Ala.csv  Asp.csv  Cr.csv  GABA.csv  GPC.csv  Glc.csv  Gln.csv  Glu.csv  Gly.csv  Gua.csv  Lac.csv  NAA.csv  NAAG.csv  PCho.csv  Tau.csv  lip1_200.csv  lip1_251.csv  lip2_1.30ppm.csv  lip3_2.05ppm.csv  lip4_2.24ppm.csv  lip5_2.81ppm.csv  m-ins.csv  mm2_1.51ppm.csv  mm3_2.10ppm.csv  mm4_3.00ppm.csv  s-Ins.csv
data/: 7T_smo_mouse.dpt  SKNAS.dpt  aligned_batch_processed.dpt  broken.dpt  broken2.dpt  processed.dpt  real_mb_proc.dpt  svs_135_WS.SDAT  svs_135_ref.SPAR  svs_135_w.dpt  svs_135_ws.dpt  svs_30_ref.SDAT  svs_30_ref.SPAR  svs_30_ws.dpt  unknown.dpt
data/ge/: P1751_1.5T_030_2000.7  P1751_1.5T_030_2000.7.shf  P1802_1.5T_030_2000.7  P1802_1.5T_030_2000.7.shf  P1806_1.5T_030_2000.7  P1806_1.5T_030_2000.7.shf  P1809_1.5T_030_2000.7  P1809_1.5T_030_2000.7.shf  P1813_1.5T_030_2000.7  P1813_1.5T_030_2000.7.shf  P1817_1.5T_030_2000.7  P1817_1.5T_030_2000.7.shf  P1820_1.5T_030_2000.7  P1820_1.5T_030_2000.7.shf  P1823_1.5T_030_2000.7  P1823_1.5T_030_2000.7.shf  P1827_1.5T_030_2000.7  P1827_1.5T_030_2000.7.shf  P1830_1.5T_030_2000.7  P1830_1.5T_030_2000.7.shf  P1834_1.5T_030_2000.7  P1834_1.5T_030_2000.7.shf  P1837_1.5T_030_2000.7  P1837_1.5T_030_2000.7.shf  P1840_1.5T_030_2000.7  P1840_1.5T_030_2000.7.shf  P1844_1.5T_030_2000.7  P1844_1.5T_030_2000.7.shf  P1847_1.5T_030_2000.7  P1847_1.5T_030_2000.7.shf  (+10 more)
src/: CMakeLists.txt  CREDITS.txt  Doxyfile  README.txt  README.win32  TESTING-HOWTO.txt  TODO  change_log.txt  depends.txt  help.txt  multi_vox_design.txt
src/cmdline/: CMakeLists.txt  main.cpp
src/common/: CBasis.cpp  CBasis.hpp  CBoswell.cpp  CBoswell.hpp  CCSVFile.cpp  CCSVFile.hpp  CConstraint.hpp  CFID.cpp  CFID.hpp  CMakeLists.txt  CNNLSSolver.hpp  CNNLSSolverLH.cpp  CNNLSSolverLH.hpp  CSignal.hpp  FNNLSSolverBJ.cpp  FNNLSSolverBJ.hpp  NNLSSolverBJ.cpp  NNLSSolverBJ.hpp  Options.hpp  PlotBasis.cpp.old  Workspace.cpp  Workspace.hpp  WriteDanger.hpp  basis_set.cpp  basis_set.hpp  common.cpp  common.hpp  compat.hpp  console.cpp  console.hpp  cvm_util.cpp  cvm_util.hpp  exception.hpp  export_data.cpp  export_data.hpp  fitviewer.cpp  fitviewer.hpp  gen_proto.sh  gotarquin  hsvd.cpp  (+16 more)
src/common/fidio/: CDICOMFile.cpp  CDICOMFile.hpp  CFIDReader.cpp  CFIDReader.hpp  CFIDReaderBruker.cpp  CFIDReaderBruker.hpp  CFIDReaderDCM.cpp  CFIDReaderDCM.hpp  CFIDReaderDPT.cpp  CFIDReaderDPT.hpp  CFIDReaderGE.cpp  CFIDReaderGE.hpp  CFIDReaderJMRUITXT.cpp  CFIDReaderJMRUITXT.hpp  CFIDReaderLCM.cpp  CFIDReaderLCM.hpp  CFIDReaderPhilips.cpp  CFIDReaderPhilips.hpp  CFIDReaderPhilipsDCM.cpp  CFIDReaderPhilipsDCM.hpp  CFIDReaderRDA.cpp  CFIDReaderRDA.hpp  CFIDReaderSiemens.cpp  CFIDReaderSiemens.hpp  CFIDReaderVarian.cpp  CFIDReaderVarian.hpp  GEOptions.hpp
src/cvmlib/cvm/: CMakeLists.txt
src/cvmlib/cvm/ftn/: CMakeLists.txt  Makefile  axpym.f  cmexp.f  cmplx.f  copym.f  cpoly.f  dmexp.f  dpoly.f  icamax.f  icamin.f  idamin.f  infnm.f  isamin.f  izamax.f  izamin.f  npoly.f  scalm.f  smexp.f  spoly.f  zmexp.f  zpoly.f
src/cvmlib/cvm/src/: CMakeLists.txt  arrays.cpp  blas.h  cmatrix.cpp  cvector.cpp  cvm.h  globals.cpp  rmatrix.cpp  rvector.cpp  scmatrix.cpp  srmatrix.cpp  utils.cpp
src/cvmlib/cvm/test/: Makefile  test.cpp
src/doc/: README
src/fast_sim/: CMakeLists.txt
src/fast_sim/eigen3_1_1/Eigen/src/SVD/: JacobiSVD.h
src/fast_sim/fast_sim/: CMakeLists.txt  fast_sim.cpp  fast_sim.hpp  pulse_sequences.cpp  pulse_sequences.hpp
src/generate_spectra/: CMakeLists.txt  main.cpp
src/installer/: installer.nsi
src/installer/bundle/: w.dpt  ws.dpt
src/installer/bundle/default_basis/: Cr.csv  GABA.csv  GPC.csv  Glc.csv  Ins.csv  Lac.csv  MM12.csv  NAA.csv  NAAG.csv  Tau.csv
src/levmar/levmar-2.5/: CMakeLists.txt  Makefile  lmdemo
src/qtgui/: CMakeLists.txt  MRI.cpp  MRI.hpp  aboutdlg.cpp  aboutdlg.h  formatdlg.cpp  formatdlg.h  guicommon.cpp  guicommon.h  inputdlg.cpp  inputdlg.h  main.cpp  mainwindow.cpp  mainwindow.h  quickfitdlg.cpp  quickfitdlg.h  resultsdlg.cpp  resultsdlg.h  session.cpp  session.h  tarquinplotwidget.cpp  tarquinplotwidget.h  voxel_select.cpp  voxel_select.h
src/qtgui/resources/: tarquingui.qrc
src/qtgui/ui/: aboutdlg.ui  formatdlg.ui  inputdlg.ui  mainwindow.ui  quickfitdlg.ui  resultsdlg.ui  voxel_select.ui
src/testing/: MCSimulation.cpp  MCSimulationSNR.cpp  gotarquin  gotarquinphase  test_tarquin  view_simulation.cpp
src/threadpool/boost/threadpool/: task_adaptors.hpp
src/unit_tests/: CMakeLists.txt  main.cpp  test_fast_sim.cpp  test_fit.cpp  test_io.cpp  test_nnls.cpp  test_proc.cpp  test_simulation.cpp  test_util.cpp  test_util.hpp
src/unit_tests/data/: -CrCH2.ref  3t_basis.xml  Ala.ref  Asp.ref  Cr.ref  GABA.ref  GPC.ref  Glc.ref  Gln.ref  Glu.ref  Gua.ref  Ins.ref  Lac.ref  Lip09.ref  Lip13a.ref  Lip13b.ref  Lip20.ref  MM09.ref  MM12.ref  MM14.ref  MM17.ref  MM20.ref  NAA.ref  NAAG.ref  PCh.ref  SVS.dcm  Scyllo.ref  Tau.ref  dpt_test_input.dpt  fast_sim_H.ref  fast_sim_delay_a_state.ref  fast_sim_delay_b_state.ref  fast_sim_eig_vecs.ref  fast_sim_init_state.ref  fast_sim_post_d1_state.ref  fast_sim_pre_acq_state.ref  fast_sim_time_sig.ref  phase.ref  philips_spar_sdat_W.SPAR  philips_spar_sdat_W.ref  (+6 more)
src/version/: CMakeLists.txt  version.cpp  version.h  version_constants.h  version_constants.h.in
(+54 files in other folders)
